<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:keepScreenOn="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/node_rolling" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/iv_loading" android:layout_width="80.0dip" android:layout_height="80.0dip" android:layout_marginTop="30.0dip" />
        <TextView android:textSize="@dimen/delete_btn_txt_size" android:textColor="@android:color/white" android:gravity="center_horizontal" android:layout_gravity="center_vertical" android:id="@id/tv_hint" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/hint_rolling" />
        <Button android:textSize="@dimen/delete_btn_txt_size" android:textColor="@android:color/white" android:layout_gravity="bottom|center" android:id="@id/btn_cancel" android:background="@drawable/button_backgroud_selector" android:layout_width="@dimen/delete_btn_width" android:layout_height="@dimen/delete_btn_height" android:layout_marginTop="@dimen/delete_btn_margin_top" android:layout_marginBottom="@dimen/delete_btn_margin_bottom" android:text="@string/btn_cancel" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/node_result" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip">
        <TextView android:textSize="@dimen/delete_btn_txt_size" android:textColor="@android:color/white" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/title_result" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/hint_success_exported_title" />
        <TextView android:textSize="@dimen/delete_btn_txt_size" android:textColor="@android:color/white" android:gravity="center_horizontal" android:id="@id/msg_result" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/hint_where" />
        <Button android:textSize="@dimen/delete_btn_txt_size" android:textColor="@android:color/white" android:layout_gravity="center_horizontal" android:id="@id/result_confirm" android:background="@drawable/button_backgroud_selector" android:layout_width="@dimen/delete_btn_width" android:layout_height="@dimen/delete_btn_height" android:layout_marginTop="30.0dip" android:text="@string/btn_confirm" />
    </LinearLayout>
</FrameLayout>