<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/sport_running_bg" android:paddingTop="18.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.huami.watch.common.widget.HmTextView android:textSize="19.0sp" android:textColor="@color/default_font_color_white" android:id="@id/history_detail_gps_sport_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/real_time_route" android:layout_centerHorizontal="true" style="@style/sport_text_style" />
    <RelativeLayout android:gravity="center" android:id="@id/output_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <Button android:textSize="@dimen/delete_btn_txt_size" android:textColor="@android:color/black" android:id="@id/delete_summary" android:background="@drawable/button_backgroud_selector_green" android:focusable="false" android:clickable="false" android:layout_width="@dimen/delete_btn_width" android:layout_height="@dimen/delete_btn_height" android:layout_marginTop="10.0dip" android:text="@string/real_time_output" />
    </RelativeLayout>
    <RelativeLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_above="@id/output_container" android:layout_below="@id/history_detail_gps_sport_title">
        <ImageView android:id="@id/history_detail_sport_trail" android:layout_width="@dimen/sport_history_detail_trail_width1" android:layout_height="@dimen/sport_history_detail_trail_height1" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_toRightOf="@id/history_detail_sport_trail">
            <com.huami.watch.common.widget.HmRelativeLayout android:id="@id/dis_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentLeft="true">
                <com.huami.watch.common.widget.HmTextView android:textSize="12.0sp" android:textColor="@color/white" android:gravity="left" android:id="@id/route_dis_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/real_time_total_dis_title" style="@style/sport_text_style" />
                <com.huami.watch.common.widget.HmRelativeLayout android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/route_dis_title" android:layout_alignLeft="@id/route_dis_title">
                    <com.huami.watch.sport.ui.view.NumberTextView android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/route_dis" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sport_pause_heart_shown" style="@style/sport_num_text_style" />
                    <com.huami.watch.common.widget.HmTextView android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/dis_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/km_metric" android:layout_toRightOf="@id/route_dis" android:layout_alignBaseline="@id/route_dis" style="@style/sport_text_style" />
                </com.huami.watch.common.widget.HmRelativeLayout>
            </com.huami.watch.common.widget.HmRelativeLayout>
            <com.huami.watch.common.widget.HmRelativeLayout android:id="@id/altitude_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_alignParentLeft="true">
                <com.huami.watch.common.widget.HmTextView android:textSize="12.0sp" android:textColor="@color/white" android:gravity="left" android:id="@id/route_dis_climb_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/crossing_climb_up" style="@style/sport_text_style" />
                <com.huami.watch.common.widget.HmRelativeLayout android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/route_dis_climb_title" android:layout_alignLeft="@id/route_dis_climb_title">
                    <com.huami.watch.sport.ui.view.NumberTextView android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/route_climb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sport_pause_heart_shown" style="@style/sport_num_text_style" />
                    <com.huami.watch.common.widget.HmTextView android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/climb_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/metre_metric" android:layout_toRightOf="@id/route_climb" android:layout_alignBaseline="@id/route_climb" style="@style/sport_text_style" />
                </com.huami.watch.common.widget.HmRelativeLayout>
            </com.huami.watch.common.widget.HmRelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>